# quilt

./: .envrc  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/wiki/: adding-a-language.md  bootstrap.md  cli.md  concepts.md  concrete-languages.md  editor-setup.md  improvements.md  index.md  language-traits.md  lsp.md  multi-omni.md  nanobots.md  pipeline.md  python-bindings.md  qterm.md
examples/: bash_backup.rs.quilt  cargo_crate.tree.rs.quilt  countdown.rs  countdown.rs.quilt  expr_compose.py  expr_compose.py.quilt  factorials.py.rs  factorials.py.rs.quilt  fizzbuzz_gen.rs  fizzbuzz_gen.rs.quilt  greeting.py.tmpl.quilt  greeting.values.toml  greeting_card.py.tmpl.quilt  greeting_card.values.toml  hello.py  hello.py.quilt  hello.rs.quilt  html_report.rs  html_report.rs.quilt  issue_triage.html.py  issue_triage.html.py.quilt  mini_app.values.toml  nix_host.nix.quilt  nix_module.rs  nix_module.rs.quilt  pow_specialize.py  pow_specialize.py.quilt  pow_specialize.rs  pow_specialize.rs.quilt  primes.rs  primes.rs.quilt  py_pkg.tree.py.quilt  reduce.py  reduce.py.quilt  scaffold_pkg.tree.py.quilt  staged_pow.py  staged_pow.py.quilt  times_table.rs  times_table.rs.quilt  upper_tri_mul.py  (+4 more)
examples/cargo-demo/: Cargo.toml  README.md
examples/cargo-demo/src/: main.rs  main.rs.quilt
examples/mini_app/: LICENSE  index.html.tmpl.quilt
examples/mini_app/src/: app.py.tmpl.quilt
examples/web/: README.md  build.mjs  cards.html.ts  cards.html.ts.quilt  index.html  playground.html  playground.js  theme.css  verify-dashboard.mjs  verify-playground.mjs  verify.mjs
nix/: flake.nix
quilt/: Cargo.toml  build.rs
quilt-expand-wasm/: Cargo.toml
quilt-expand-wasm/src/: main.rs
quilt-lsp/: Cargo.toml  README.md
quilt-lsp/queries/: wgsl-highlights.scm
quilt-lsp/src/: adapters.rs  child.rs  code_actions.rs  document.rs  lib.rs  lineindex.rs  main.rs  projection.rs  regions.rs  semtok.rs  server.rs  srcmap.rs  translate.rs  tshl.rs
quilt-lsp/tests/: diag_examples.py  integration_gotodef.py  integration_mock.py  integration_python.py  integration_ra.py  integration_semtok.py  mock_server.py  smoke_lsp.py
quilt-python/: Cargo.toml  pyproject.toml
quilt-python/quilt/: __init__.py
quilt-python/src/: lib.rs
quilt-python/tests/: demo.py  test_main.py  test_tree.py
quilt-wasm/: .gitignore  Cargo.toml  README.md
quilt-wasm/src/: lib.rs
quilt-wasm/test/: smoke.cjs
quilt/grammars/html/: parser.c  scanner.c
quilt/src/: bin.rs  dir_template.rs  grammars.rs  lang.rs  lib.rs  lift.rs  manifest.rs  meta.rs  multi.rs  new_lang.rs  node.rs  prelude.rs  qmatch.rs  qterm.rs  sink.rs  strcmd.rs  template.rs  term.rs  tree.rs  treesitter.rs  util.rs  validate.rs  zipper.rs
quilt/src/langs/: mod.rs  new_lang.tree.rs.quilt  omni.rs
quilt/src/langs/bash/: lang.rs
quilt/src/langs/bootstrap/: lang.rs  meta.rs  mk_meta.rs.quilt  mod.rs  strlift.rs
quilt/src/langs/html/: lang.rs
quilt/src/langs/nix/: lang.rs  meta.rs  mod.rs  ops.rs
quilt/src/langs/python/: lang.rs  meta.rs  mod.rs  ops.rs
quilt/src/langs/rust/: lang.rs  meta.rs  ops.rs
quilt/src/langs/text/: lang.rs  meta.rs  mod.rs
quilt/src/langs/typescript/: lang.rs  meta.rs  ops.rs
quilt/src/langs/wgsl/: lang.rs
quilt/src/langs/zsh/: lang.rs
quilt/tests/: bootstrap.rs  expand.rs  expand_html.rs  expand_nix.rs  expand_python.rs  expand_rust.rs  expand_typescript.rs  expand_wgsl.rs  inner_kinds.rs  instantiate_cli.rs  instantiate_dir_cli.rs  kinds.rs  multiline.rs  nix_sink.rs  sky_first.rs  strlift.rs  tests.rs  tier_a.rs  tier_b.rs
tools/: DefaultKeyBinding.dict
tools/quilt/: CHANGELOG.md  README.md  extension.js  language-configuration.json  package-lock.json  package.json  quilt  vsc-extension-quickstart.md
tools/quilt/syntaxes/: quilt.tmLanguage.json
tree-sitter-quilt/: .gitattributes  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-quilt/bindings/c/: tree-sitter-quilt.pc.in
tree-sitter-quilt/bindings/c/tree_sitter/: tree-sitter-quilt.h
tree-sitter-quilt/bindings/go/: binding.go  binding_test.go
tree-sitter-quilt/bindings/node/: binding.cc  index.js
tree-sitter-quilt/bindings/python/tests/: test_binding.py
tree-sitter-quilt/bindings/python/tree_sitter_quilt/: __init__.py  binding.c
tree-sitter-quilt/bindings/rust/: build.rs  lib.rs
tree-sitter-quilt/bindings/swift/TreeSitterQuiltTests/: TreeSitterQuiltTests.swift
tree-sitter-quilt/examples/: hello.py.quilt
tree-sitter-quilt/queries/: highlights.scm
tree-sitter-quilt/quilt.dylib.dSYM/Contents/: Info.plist
tree-sitter-quilt/quilt.dylib.dSYM/Contents/Resources/Relocations/aarch64/: quilt.dylib.yml
tree-sitter-quilt/src/: grammar.json  node-types.json  parser.c
tree-sitter-quilt/test/corpus/: test.txt
