[workspace]
resolver = "2"
# quilt-python, quilt-wasm, and quilt-expand-wasm are intentionally NOT in
# default-members. quilt-python is a PyO3 `cdylib` that links libpython, so
# including it would make a bare `cargo build` / `cargo test` at the workspace
# root require a Python interpreter + dev headers. quilt-wasm is a wasm-bindgen
# `cdylib` whose real artifact is `wasm-pack build`ed for
# `wasm32-unknown-unknown`. quilt-expand-wasm is a WASI command whose real
# artifact is built for `wasm32-wasip1` against a WASI sysroot (see its
# Cargo.toml). The common CLI/LSP path needs none of them. Build them
# explicitly: `cargo build -p quilt_python` (or `bin/build-py`), `wasm-pack
# build quilt-wasm`, and `bin/build-expand-wasm`.
default-members = [
  "quilt",
  "quilt-lsp",
]
members = [
  "quilt",
  "quilt-lsp",
  "quilt-python",
  "quilt-wasm",
  "quilt-expand-wasm",
  "tree-sitter-quilt",
]

[workspace.package]
edition = "2021"
version = "0.4.0"
license = "MIT OR Apache-2.0"
authors = ["Alexander Varga <varga.alex@gmail.com>"]
repository = "https://github.com/QuiltLang/quilt"

[workspace.dependencies]
# Internal crates. The core package is published as `quiltlang` (issue #33);
# `package =` keeps the `quilt` dependency key so `use quilt::...` is unchanged.
quilt = {version = "0.4.0", path = "quilt", package = "quiltlang", default-features = false}
# `version` is required alongside `path` so dependents (quiltlang, quilt-lsp)
# can be `cargo publish`ed: the registry copy drops `path` and keeps `version`.
tree-sitter-quilt = {version = "0.4.0", path = "tree-sitter-quilt"}
# Grammar crates pulled from their QuiltLang forks (previously git submodules).
# Each is pinned to an explicit `rev` so the build is reproducible even for
# library consumers and `cargo install --git … quiltlang` runs that ignore our
# Cargo.lock: without a pin these track the fork's default-branch HEAD, so a new
# commit or force-push on a fork would silently change builds. Bump a rev here
# deliberately when pulling in upstream grammar changes.
tree-sitter-bash = {git = "https://github.com/QuiltLang/tree-sitter-bash.git", rev = "4e44c9fca4f64f75dbafd64d07eb3b065f15e45b"}
tree-sitter-html = {git = "https://github.com/QuiltLang/tree-sitter-html.git", rev = "d81ae0f44b1e084a3383b3355c62cb6953260467"}
tree-sitter-python = {git = "https://github.com/QuiltLang/tree-sitter-python.git", rev = "72de24676b4acb63d6cee78eaf3d5d18fd2ad6b9"}
tree-sitter-rust = {git = "https://github.com/QuiltLang/tree-sitter-rust.git", rev = "167de1910dcba9c59d6fa59e37868aa8d14c772b"}
# The `quilt_hole` change (issue #44) is merged to the fork's master; this rev
# is its tip, adding the `__HOLE__` interpolation token.
tree-sitter-typescript = {git = "https://github.com/QuiltLang/tree-sitter-typescript.git", rev = "25f4db1700b970293b83c5964581ff8ef718106f"}
tree-sitter-wgsl = {git = "https://github.com/QuiltLang/tree-sitter-wgsl.git", rev = "a83b84c4dd9ce8f28ee79d36b09ccbaef0f51d6b"}
tree-sitter-zsh = {git = "https://github.com/QuiltLang/tree-sitter-zsh.git", rev = "6923371dfd93a273e6ef4af0ba27c12ec8e5ab1d"}

# External crates (versions only; features are selected per-crate)
anyhow = "1"
clap = "4.6"
dashmap = "6"
indoc = "2.0"
miette = "7.4"
postcard = "1.1"
pretty_assertions = "1.4"
pyo3 = "0.28"
regex = "1.12"
serde = "1.0"
serde_json = "1.0"
streaming-iterator = "0.1"
tempfile = "3.27"
tokio = "1"
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = "0.3"
tree-sitter = "0.25"

[workspace.lints.clippy]
pedantic = "warn"

default_trait_access = {level = "allow", priority = 1}
items_after_statements = {level = "allow", priority = 1}
missing_errors_doc = {level = "allow", priority = 1}
missing_panics_doc = {level = "allow", priority = 1}
module_name_repetitions = {level = "allow", priority = 1}
must_use_candidate = {level = "allow", priority = 1}
needless-raw-string-hashes = {level = "allow", priority = 1}
redundant_closure_for_method_calls = {level = "allow", priority = 1}
return_self_not_must_use = {level = "allow", priority = 1}
similar_names = {level = "allow", priority = 1}
too_many_lines = {level = "allow", priority = 1}
