[package]
edition.workspace = true
name = "quilt-lsp"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Language Server for Quilt (.quilt) files: a multiplexing host that proxies to per-language servers."

[dependencies]
tower-lsp.workspace = true
tokio = {workspace = true, features = ["full"]}
dashmap.workspace = true
anyhow.workspace = true
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["env-filter"]}
tree-sitter = {workspace = true}
tree-sitter-quilt = {workspace = true}
tree-sitter-python = {workspace = true, optional = true}
tree-sitter-wgsl = {workspace = true, optional = true}
tree-sitter-html = {workspace = true, optional = true}
tree-sitter-bash = {workspace = true, optional = true}
tree-sitter-zsh = {workspace = true, optional = true}
streaming-iterator = {workspace = true}

[dev-dependencies]
tempfile.workspace = true

[features]
# Mirror quilt's own feature flags: each enables wiring for one downstream
# language. v1 ships only `rust`. Others are reserved extension points.
default = ["rust", "python", "wgsl", "html", "bash", "zsh"]
rust = []
python = ["dep:tree-sitter-python"]
wgsl = ["dep:tree-sitter-wgsl"]
html = ["dep:tree-sitter-html"]
bash = ["dep:tree-sitter-bash"]
zsh = ["dep:tree-sitter-zsh"]

[lints]
workspace = true

[lib]
name = "quilt_lsp"
path = "src/lib.rs"

[[bin]]
name = "quilt-lsp"
path = "src/main.rs"
