[package]
edition.workspace = true
name = "quilt-lsp"
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Language Server for Quilt (.quilt) files: a multiplexing host that proxies to per-language servers."

[dependencies]
tower-lsp.workspace = true
tokio = {workspace = true, features = ["full"]}
dashmap.workspace = true
anyhow.workspace = true
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["env-filter"]}
tree-sitter = {workspace = true}
tree-sitter-quilt = {workspace = true}
# The downstream-language parsers + highlight queries come from the published
# `quiltlang` crate's vendored `quilt::grammars` module (issue #32) — depending
# on the tree-sitter-* forks directly would pull git deps crates.io rejects and
# block publishing. Optional: only enabled by the per-language features below.
quilt = {workspace = true, optional = true}
streaming-iterator = {workspace = true}

[dev-dependencies]
tempfile.workspace = true

[features]
# Mirror quilt's own feature flags: each enables wiring for one downstream
# language. v1 ships only `rust`. Others are reserved extension points.
default = ["rust", "python", "wgsl", "html", "bash", "zsh"]
rust = []
# Each downstream language pulls its parser (and, where highlighted, its query)
# from quilt::grammars, gated by the matching quilt feature. python's grammar
# lives under quilt's `parse` umbrella; the others each imply `parse`.
python = ["quilt/parse"]
wgsl = ["quilt/wgsl"]
html = ["quilt/html"]
bash = ["quilt/bash"]
zsh = ["quilt/zsh"]

[lints]
workspace = true

[lib]
name = "quilt_lsp"
path = "src/lib.rs"

[[bin]]
name = "quilt-lsp"
path = "src/main.rs"
