[package]
edition.workspace = true
name = "quilt_python"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "quilt_python"

[dependencies]
pyo3 = {workspace = true, features = ["abi3-py38"]}
postcard = {workspace = true, features = ["alloc"]}
quilt = {workspace = true}
