[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
# PyPI distribution name is `quiltlang` (`quilt` is taken on PyPI — Quilt
# Data's package manager; see issue #33). The Python *import* name stays
# `quilt` via [tool.maturin] module-name below; the Cargo crate stays
# `quilt_python`.
name = "quiltlang"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
# Native extension `_quilt` lives inside the `quilt/` package (mixed layout);
# quilt/__init__.py re-exports it. `extension-module` is enabled here (not in
# Cargo.toml) so plain `cargo build` can still link libpython.
module-name = "quilt._quilt"
features = ["pyo3/extension-module"]
