[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
# PyPI distribution name is `quilt-python`. `quilt` is taken (Quilt Data's
# package manager) and `quiltlang` is rejected by PyPI as "too similar to an
# existing project" (issue #33), so the Python distribution diverges from the
# crates.io crate name (`quiltlang`). The Python *import* name still stays
# `quilt` via [tool.maturin] module-name below, so `from quilt import …` is
# unchanged; the Cargo crate stays `quilt_python`.
name = "quilt-python"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
# Native extension `_quilt` lives inside the `quilt/` package (mixed layout);
# quilt/__init__.py re-exports it. `extension-module` is enabled here (not in
# Cargo.toml) so plain `cargo build` can still link libpython.
module-name = "quilt._quilt"
features = ["pyo3/extension-module"]
