[package]
edition.workspace = true
# Published as `quiltlang` (`quilt` is taken on crates.io); the lib target
# below keeps the `quilt` import name, so `use quilt::prelude::*` works
# everywhere. External consumers depend on it via
# `quilt = { package = "quiltlang", version = "0.1" }`. See issue #33.
name = "quiltlang"
description = "Quilt, a polyglot metaprogramming language: source code with arrow-bracket syntax for embedding and manipulating code fragments of other languages at code-generation time."
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
# Compiles the vendored tree-sitter parsers under `grammars/<lang>/` (see
# `build.rs` and `src/grammars.rs`), gated on the language features below.
build = "build.rs"

[lib]
name = "quilt"

[dependencies]
clap = {workspace = true, features = ["derive"]}
indoc = {workspace = true}
miette = {workspace = true, features = ["fancy"]}
postcard = {workspace = true, features = ["alloc", "use-std"]}
regex = {workspace = true}
serde = {workspace = true, features = ["derive", "rc"]}
# The `.quilt/manifest.json` for idempotent regen (issue #94). The `manifest`
# module is always compiled (no tree-sitter), so this is a regular dependency;
# serde_json is pure Rust and builds for the wasm/no-parse consumers too.
serde_json = {workspace = true}
tempfile = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["env-filter"]}
# Only the `quilt instantiate` CLI reads `--values` TOML files, and the CLI
# requires `parse`; gate it there so runtime-only/wasm consumers stay toml-free.
toml = {workspace = true, optional = true}
# Tree-sitter parsing is only needed to *parse* Quilt sources (the `parse`
# feature). The runtime that expanded code targets (the `QTerm` builders,
# `qlift`, `coparse`) is tree-sitter-free, so consumers like nanobots-codegen
# can depend on quilt with `default-features = false, features = ["rust"]` and
# build for `wasm32-unknown-unknown` without the tree-sitter C runtime.
tree-sitter = {workspace = true, optional = true}
tree-sitter-quilt = {workspace = true, optional = true}
# The downstream grammars (rust, python, typescript, wgsl, bash, html, zsh, nix)
# are vendored under `grammars/<lang>/` and compiled by `build.rs`, not pulled as
# crates — that keeps `quiltlang` free of the git dependencies crates.io rejects
# (issue #32). `tree-sitter-language` provides the `LanguageFn` type the
# generated-parser bindings in `src/grammars.rs` wrap.
tree-sitter-language = {version = "0.1", optional = true}

[build-dependencies]
cc = "1.2"

[dev-dependencies]
indoc = {workspace = true}
pretty_assertions = {workspace = true}

[lints]
workspace = true

[features]
bootstrap = ["parse"]
default = ["python", "rust", "text", "bootstrap", "wgsl", "html", "zsh", "bash", "typescript", "nix"]
# `parse` enables tree-sitter: the Quilt-source parser (`node`/`treesitter`),
# the `Language` providers, `omni`, and `Multi`'s parse path. Off by default for
# the runtime-only consumers (e.g. nanobots-codegen on wasm). It also pulls in
# the vendored rust + python parsers (the host languages); `build.rs` compiles
# their C when this feature is set. The target-language features below each add
# their own vendored parser and imply `parse`.
parse = [
  "dep:tree-sitter",
  "dep:tree-sitter-quilt",
  "dep:tree-sitter-language",
  "dep:toml",
]
bash = ["parse"]
html = ["parse"]
nix = ["parse"]
python = []
rust = []
text = []
typescript = ["parse"]
wgsl = ["parse"]
zsh = ["parse"]

[[bin]]
name = "quilt"
path = "src/bin.rs"
# The CLI parses Quilt sources, so it needs tree-sitter.
required-features = ["parse"]
