[package]
name = "tree-sitter-quilt"
description = "Quilt grammar for tree-sitter"
version = "0.2.0"
authors = ["Alexander Varga <varga.alex@gmail.com>"]
license.workspace = true
keywords = ["incremental", "parsing", "tree-sitter", "quilt"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/QuiltLang/quilt"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.0"
